Try some new jvm options